# qr-detection

./: CMakeLists.txt  LICENSE.md  README.md
include/BAVQR/: qr.h
include/QR/: qr.h
src/: qr.cpp
